--- a/Cameren'sLinkPage.html
+++ b/Cameren'sLinkPage.html
@@ -6,13 +6,14 @@
     </head>
     <body>
         <h1>Hello World!</h1>
-        <p>I am a Computer Science student looking for internships focusing on software
-            development, enhancing my skills in Python, Java, C and HTML; With a methodical train of thinking
-            dedicated to continuous learning and staying updated with the latest industry trends. Open to collaborations, networking, and exploring opportunities to contribute to this ever-evolving tech landscape. Let's connect and explore the endless possibilities at the intersection of code and creativity!</p>
+        <p>My name is Cameren Green, a commited sophomore majoring in Computer Science at the University of Kansas with a strong interest in software development. I enjoy building innovative solutions, solving complex problems, and continuously expanding my knowledge in the tech industry</p>
         <p>My Useful links:</p>
         <ul>
             <li><a href="https://www.github.com/CamerenGreen">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/cameren-green-830164244/">LinkedIn</a></li>
         </ul>
+        <p>Contact me at:</p>
+        <ul>
+            <li>Email: cgreen7241@ku.edu</li>
     </body>
 </html>
