--- a/Cameren'sLinkPage.html
+++ b/Cameren'sLinkPage.html
@@ -1,19 +1,81 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Cameren Green</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-        <p>My name is Cameren Green, a commited sophomore majoring in Computer Science at the University of Kansas with a strong interest in software development. I enjoy building innovative solutions, solving complex problems, and continuously expanding my knowledge in the tech industry</p>
-        <p>My Useful links:</p>
-        <ul>
-            <li><a href="https://www.github.com/CamerenGreen">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/cameren-green-830164244/">LinkedIn</a></li>
-        </ul>
-        <p>Contact me at:</p>
-        <ul>
-            <li>Email: cgreen7241@ku.edu</li>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cameren's Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+        nav {
+            margin: 1rem 0;
+            text-align: center;
+        }
+        nav a {
+            margin: 0 1rem;
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+        }
+        .container {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 1rem;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .about-me {
+            text-align: center;
+        }
+        .links {
+            text-align: center;
+            margin-top: 2rem;
+        }
+        .links a {
+            display: inline-block;
+            margin: 0.5rem;
+            padding: 0.5rem 1rem;
+            background-color: #333;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .links a:hover {
+            background-color: #555;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Cameren's Website</h1>
+    </header>
+    <nav>
+        <a href="#about-me">About Me</a>
+        <a href="resume.pdf" target="_blank">Resume</a>
+        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+    </nav>
+    <div class="container">
+        <section id="about-me" class="about-me">
+            <h2>About Me</h2>
+            <p>Test Paragraph, about me text goes here</p>
+        </section>
+        <section class="links">
+            <h2>Connect with Me</h2>
+            <a href="Cameren_Green_Resume_2025.pdf" target="_blank">Resume</a>
+            <a href="https://www.github.com/CamerenGreen" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/cameren-green-830164244/" target="_blank">LinkedIn</a>
+        </section>
+    </div>
+</body>
 </html>
