--- a/Cameren'sLinkPage.html
+++ b/Cameren'sLinkPage.html
@@ -61,9 +61,8 @@
     </header>
     <nav>
         <a href="#about-me">About Me</a>
-        <a href="resume.pdf" target="_blank">Resume</a>
-        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+        <a href="Cameren_Green_Resume_2025.pdf" target="_blank">Resume</a>
+        <a href="portfolioPage.html" target="_blank">Portfolio</a>
     </nav>
     <div class="container">
         <section id="about-me" class="about-me">
