--- a/portfolioPage.html
+++ b/portfolioPage.html
@@ -41,9 +41,19 @@
     <div class="container">
         <h2>Projects</h2>
         <ul>
-            <li>Project 1: Description of project 1</li>
-            <li>Project 2: Description of project 2</li>
+            <li>
+                <h3>Calculator</h3>
+                <p>A simple calculator application that I built using HTML, CSS, and JavaScript.</p>
+                <a href="Calculator.html" download>View Calculator</a>
+            </li>
+            <li>
+                <h3>Interval Timer</h3>
+                <p>A Python-based interval timer application that I used for a difficult video game that I played.</p>
+                <a href="Interval Timer.py" download>View Interval Timer Script</a>
+            </li>
             <li>Project 3: Description of project 3</li>
+            <li>Project 4: Description of project 4</li>
+            <li>Project 5: Description of project 5</li>
             <!-- Add more projects as needed -->
         </ul>
     </div>
