--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         a {
-            color: #0073e6;
+            color: #92635e;
             text-decoration: none;
         }
 
@@ -89,7 +89,7 @@
         .project h3 {
             font-size: 1.4em;
             margin: 0;
-            color: #333;
+            color: #927d5e;
         }
 
         .project p {
@@ -167,7 +167,7 @@
         <section id="about">
             <h2>About Me</h2>
             <div style="display: flex; align-items: center;"></div>
-
+            <img src="KU Engineering Career Fair Spring 2025-11.jpg" alt="That's me!" style="width: 200px; height: 300px; border-radius: 10%; margin-right: 20px;">
             <p>
                 Hello! I'm a sophomore at the University of Kansas (KU), majoring in Computer Science. My passion lies in software engineering and artificial intelligence/machine learning. I enjoy solving complex problems and building innovative solutions that make a difference.
             </p>
