--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <!-- Header -->
         <header style="margin-top: 80px;">
             <h1>Hey! My name is Cameren Green</h1>
-            <p>University of Kansas | Computer Science Major | Software Engineer & AI/ML Enthusiast</p>
+            <p>University of Kansas | Computer Science Major | Software Engineer & ML Enthusiast</p>
         </header>
 
         <!-- Navigation -->
