--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <p>
                     An advanced calculator application developed using HTML, CSS, and JavaScript, featuring a user-friendly interface and capable of performing a variety of arithmetic operations with precision.
                 </p>
-                <a href="calculator.html">View Project</a>
+                <a href="Calculator.html">View Project</a>
             </div>
             <div class="project">
                 <h3>Project 2: AI-Powered Discord Chatbot</h3>
