--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             margin-bottom: 40px;
         }
 
+        /* main color */
         section h2 {
             font-size: 1.8em;
             color: #5e7396;
@@ -105,11 +106,13 @@
             border-radius: 3px;
         }
 
+        /* complementary color */
         .project a:hover {
             background-color: #925e8d;
         }
 
         /* Footer */
+        /* tertiary color */
         footer {
             text-align: center;
             margin-top: 40px;
@@ -153,14 +156,15 @@
         <!-- Header -->
         <header style="margin-top: 80px;">
             <h1>Hey! My name is Cameren Green</h1>
-            <p>University of Kansas | Computer Science Major | Software Engineer & ML Enthusiast</p>
+            <p>University of Kansas | Computer Science Major | Software Engineer & AI/ML Enthusiast</p>
         </header>
 
         <!-- Navigation -->
         <nav>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contact Me</a>
+            <a href="https://github.com/CamerenGreen" target="_blank">GitHub</a>
         </nav>
 
         <!-- About Section -->
@@ -197,20 +201,26 @@
                 <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Project</a>
             </div>
             <div class="project">
-                <h3>Project 3: Personal Portfolio Website</h3>
+                <h3>Project 3: ML Based Chrome Extention</h3>
                 <p>
-                    Designed and built a responsive personal website using HTML, CSS, and JavaScript to showcase my skills and projects.
+                    Developed an extension for Google Chrome that uses machine learning to recommend media based on the user's movie and television show history. This extension analyzes viewing patterns and preferences to suggest personalized content, enhancing the user's entertainment experience.
+                </p>
+                <a href="https://github.com/KU-Software-Engineers-Club">View Project</a>
+            </div>
+            <div class="project">
+                <h3>Project 4: Personal Portfolio Website</h3>
+                <p>
+                    Designed and built this responsive personal website using HTML, CSS, and JavaScript to showcase my skills and projects. More updates coming soon!
                 </p>
                 <a href="index.html">View Project</a>
             </div>
-
         </section>
 
         <!-- Contact Section -->
         <section id="contact">
-            <h2>Contact</h2>
+            <h2>Contact Me </h2>
             <p>
-                <p style="text-align: center; font-size: 1.3em; color: #000; font-weight: bold;">
+                <p style="text-align: center; font-size: 1.3em; color: #927d5e; font-weight: bold;">
                 I'd love to connect with you.
             <p>
                 <div style = "text-align: center;">
@@ -223,7 +233,7 @@
                 </p>
                 <p>
                     <strong>LinkedIn:</strong> 
-                    <a href="https://www.linkedin.com/in/cameren-green-830164244/" target="_blank">linkedin.com/in/cameren-green-830164244</a>
+                    <a href="https://www.linkedin.com/in/cameren-green-830164244/" target="_blank">Click Here</a>
                 </p>
             </div>
         </section>
