--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             var maxScroll = 70; // Adjust this value as needed
             var opacity = Math.max(0, 1 - scrollTop / maxScroll);
             welcomeMessage.style.opacity = opacity;
-            if (opacity === 0) {
+            if (opacity === 0) { 
                 welcomeMessage.style.display = 'none';
             } else {
                 welcomeMessage.style.display = 'block';
@@ -156,7 +156,7 @@
         <!-- Header -->
         <header style="margin-top: 80px;">
             <h1>Hey! My name is Cameren Green</h1>
-            <p>University of Kansas | Computer Science Major | Software Engineer & AI/ML Enthusiast</p>
+            <p>University of Kansas | Computer Science Major | Software Engineer & ML Enthusiast</p>
         </header>
 
         <!-- Navigation -->
@@ -176,7 +176,7 @@
                 Hello! I'm a sophomore at the University of Kansas (KU), majoring in Computer Science. My passion lies in software engineering and artificial intelligence/machine learning. I enjoy solving complex problems and building innovative solutions that make a difference.
             </p>
             <p>
-                I'm currently enhancing my skills in programming, algorithms, and data structures while exploring the fascinating world of AI/ML. Outside of academics, I participate in coding competitions and contribute to open-source projects.
+                I'm currently enhancing my skills in programming, algorithms, and data structures while exploring the fascinating world of ML. Outside of academics, I participate in coding competitions and contribute to open-source projects.
             </p>
             <p>
                 You can view my resume <a href="Cameren_Green_Resume_2025.pdf" target="_blank">here</a>.
@@ -196,7 +196,7 @@
             <div class="project">
                 <h3>Project 2: AI-Powered Discord Chatbot</h3>
                 <p>
-                    Developed a chatbot using JavaScript and TensorFlow to assist users with FAQs fueled by the powerful ChatGPT-3. Integrated natural language processing (NLP) and user question tracking to improve user interaction.
+                    Developed an chatbot using JavaScript and TensorFlow to assist users with FAQs fueled by ChatGPT-3 for a personal discord server. Integrated natural language processing (NLP) and user question tracking to improve user interaction.
                 </p>
                 <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Project</a>
             </div>
@@ -208,13 +208,22 @@
                 <a href="https://github.com/KU-Software-Engineers-Club">View Project</a>
             </div>
             <div class="project">
-                <h3>Project 4: Personal Portfolio Website</h3>
+                <h3>Project 4: Interval Timer</h3>
+                <p>
+                    An interval timer I used for personal uses. A timer that is capable of setting up ...
+                </p>
+                <a href="IntervalTimer.py">View Project</a>
+            </div>
+            <div class="project">
+                <h3>Project 5: Personal Portfolio Website</h3>
                 <p>
                     Designed and built this responsive personal website using HTML, CSS, and JavaScript to showcase my skills and projects. More updates coming soon!
                 </p>
                 <a href="index.html">View Project</a>
             </div>
         </section>
+
+
 
         <!-- Contact Section -->
         <section id="contact">
@@ -239,9 +248,11 @@
         </section>
     </div>
 
+
+
     <!-- Footer -->
     <footer>
-        &copy; 2023 Cameren Green. All rights reserved 
+        &copy; Made by Cameren Green. 
     </footer>
 </body>
 </html>
