--- a/index.html
+++ b/index.html
@@ -170,17 +170,15 @@
         <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
-            <div style="display: flex; align-items: center;"></div>
-            <img src="KU Engineering Career Fair Spring 2025-11.jpg" alt="That's me!" style="width: 200px; height: 300px; border-radius: 10%; margin-right: 20px;">
-            <p>
-                Hello! I'm a sophomore at the University of Kansas (KU), majoring in Computer Science. My passion lies in software engineering and artificial intelligence/machine learning. I enjoy solving complex problems and building innovative solutions that make a difference.
-            </p>
-            <p>
-                I'm currently enhancing my skills in programming, algorithms, and data structures while exploring the fascinating world of ML. Outside of academics, I participate in coding competitions and contribute to open-source projects.
-            </p>
-            <p>
-                You can view my resume <a href="Cameren_Green_Resume_2025.pdf" target="_blank">here</a>.
-            </p>
+
+            <div style="display: flex; align-items: flex-start;">
+                <img src="KU Engineering Career Fair Spring 2025-11.jpg" alt="That's me!" style="width: 200px; height: 300px; border-radius: 10%; margin-right: 20px;">
+                <div>
+                    <p>Hello! I'm a sophomore at the University of Kansas (KU), majoring in Computer Science. My passion lies in software engineering and artificial intelligence/machine learning. I enjoy solving complex problems and building innovative solutions that make a difference.</p>
+                    <p>I'm currently enhancing my skills in programming, algorithms, and data structures while exploring the fascinating world of ML. Outside of academics, I participate in coding competitions and contribute to open-source projects.</p>
+                    <p>You can view my resume <a href="Cameren_Green_Resume_2025.pdf" target="_blank">here</a>.</p>
+                </div>
+            </div>
         </section>
 
         <!-- Projects Section -->
