--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
         <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
-
             <div style="display: flex; align-items: flex-start;">
                 <img src="KU Engineering Career Fair Spring 2025-11.jpg" alt="That's me!" style="width: 200px; height: 300px; border-radius: 10%; margin-right: 20px;">
                 <div>
@@ -196,24 +195,31 @@
                 <p>
                     Developed an chatbot using JavaScript and TensorFlow to assist users with FAQs fueled by ChatGPT-3 for a personal discord server. Integrated natural language processing (NLP) and user question tracking to improve user interaction.
                 </p>
-                <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Project</a>
+                <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Repo</a>
             </div>
             <div class="project">
                 <h3>Project 3: ML Based Chrome Extention</h3>
                 <p>
                     Developed an extension for Google Chrome that uses machine learning to recommend media based on the user's movie and television show history. This extension analyzes viewing patterns and preferences to suggest personalized content, enhancing the user's entertainment experience.
                 </p>
-                <a href="https://github.com/KU-Software-Engineers-Club">View Project</a>
+                <a href="https://github.com/KU-Software-Engineers-Club">View Repo</a>
             </div>
             <div class="project">
-                <h3>Project 4: Interval Timer</h3>
+                <h3>Project 4: Crypto Price Tracker</h3>
+                <p>
+                    A cryptocurrency price tracker that provides real-time updates on the latest prices of various cryptocurrencies using. This application is built using JavaScript and CSS, and it fetches data from the CoinGecko API.
+                </p>
+                <a href="https://github.com/CamerenGreen/Crypto-Price-Tracker">View Repo</a>
+            </div>
+            <div class="project">
+                <h3>Project 5: Interval Timer</h3>
                 <p>
                     An interval timer I used for personal uses. A timer that is capable of setting up ...
                 </p>
-                <a href="IntervalTimer.py">View Project</a>
+                <a href="https://github.com/CamerenGreen/Dusk-Tempo">View Repo</a>
             </div>
             <div class="project">
-                <h3>Project 5: Personal Portfolio Website</h3>
+                <h3>Project 6: Personal Portfolio Website</h3>
                 <p>
                     Designed and built this responsive personal website using HTML, CSS, and JavaScript to showcase my skills and projects. More updates coming soon!
                 </p>
