--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="project">
                 <h3>Project 5: Interval Timer</h3>
                 <p>
-                    An interval timer I used for personal uses. A timer that is capable of setting up ...
+                    An interval timer I used for personal uses. A timer that is capable of setting up intervals for workouts, study sessions, and other activities. Built using Python.
                 </p>
                 <a href="https://github.com/CamerenGreen/Dusk-Tempo">View Repo</a>
             </div>
